# March-Madness-Dashboard

./: .gitignore  README.md  app.py  config.py  db.py  main.py  pyproject.toml
.claude/: launch.json
data/: draft_prospects_2026.json  tournament_teams_2026.json
scrapers/: draft_prospects.py  sportsref.py
services/: comparison.py  presentation.py
static/css/: styles.css
static/js/: main.js
templates/: _macros.html  base.html  comparison.html  data.html  index.html  team.html
tests/: conftest.py  test_app.py  test_comparison.py  test_db.py  test_draft_prospects.py  test_presentation.py  test_sportsref.py
