[project]
name = "march-madness-dashboard"
version = "0.1.0"
description = "March Madness Dashboard for NCAA Men's D1 Basketball"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
